tests/fixtures/syntax/valid/comment_only_line_in_case_block.repor
case "comment only line in case block" {
  // a standalone comment inside the case block
  $ true
  assert {
    exit 0
  }
}
